Added solving of 5th task

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Laba1</title>
 </head>
 <body>
 <table width="100%">
@@ -100,7 +100,6 @@
             <div>
                 <h3>4. Форма с управляющими элементами: </h3>
                 Ввод информации о студенте:
-
                 <form action="/addtobase" method="GET">
                     <input type="text" name="name" placeholder="Введите имя">
                     <br>
@@ -111,10 +110,17 @@
                     <input type="text" name="group" placeholder="Введите группу">
                     <br>
                     <input type="number" name="age" min="16" max="100" placeholder="Возраст">
-
                     <input type="submit" value="Подтвердить">
                 </form>
             </div>
+        </td>
+    </tr>
+    <tr>
+        <td>
+        <div>
+            <h3>5. Ссылки и изображения</h3>
+            <a href="another.html">Другая страница</a>
+        </div>
         </td>
     </tr>
 </table>
